       EPSON WorkForce WF-7525 (EXPERIMENTAL)
       EPSON PX-1200 (EXPERIMENTAL)
       EPSON PX-1600F (EXPERIMENTAL)
       EPSON PX-1700F (EXPERIMENTAL)

     - Canon inkjets:

       Canon MP230 series  (EXPERIMENTAL)
       Canon PIXMA MP230   (EXPERIMENTAL)(*2)
       Canon PIXMA MP236   (EXPERIMENTAL)(*2)
       Canon PIXMA MP237   (EXPERIMENTAL)(*2)

       Canon MP270 series  (EXPERIMENTAL)
       Canon PIXMA MP270   (EXPERIMENTAL)(*2)
       Canon PIXUS MP270   (EXPERIMENTAL)(*2)
       Canon PIXMA MP272   (EXPERIMENTAL)(*2)
       Canon PIXMA MP276   (EXPERIMENTAL)(*2)

       Canon MP280 series  (EXPERIMENTAL)
       Canon PIXMA MP280   (EXPERIMENTAL)(*2)
       Canon PIXUS MP280   (EXPERIMENTAL)(*2)
       Canon PIXMA MP282   (EXPERIMENTAL)(*2)
       Canon PIXMA MP287   (EXPERIMENTAL)(*2)
       Canon PIXMA MP288   (EXPERIMENTAL)(*2)

       Canon MG2100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
       Canon PIXUS MG2130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2150  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2160  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2170  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2180  (EXPERIMENTAL)(*2)

       Canon MG2200 series (EXPERIMENTAL)
       Canon PIXMA MG2210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2220  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2260  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2270  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2280  (EXPERIMENTAL)(*2)

       Canon MG3100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG3110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3120  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3122  (EXPERIMENTAL)(*2)
       Canon PIXUS MG3130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3150  (EXPERIMENTAL)(*2)